[build-system]
requires = ["setuptools>=61"]   # , "setuptools-scm", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyPRMS"
description = "Python library for Precipitation-Runoff Modeling System"
readme = "README.rst"
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Parker Norton", email = "pnorton@usgs.gov"}, ]
maintainers = [{name = "Parker Norton", email = "pnorton@usgs.gov"}, ]
keywords = ["PRMS", "NHM", "streamflow", "hydrology", "surface"]
classifiers = ["Development Status :: 3 - Alpha",
               "Programming Language :: Python :: 3", ]

dependencies = ["cartopy",
    "dask",
    "fsspec",
    "geopandas",
    "matplotlib",
    "netCDF4",
    "networkx>=2",
    "numpy",
    "pandas",
    "pyproj",
    "rich",
    "shapely",
    "xarray", ]

[project.optional-dependencies]
dev = ["mypy",
       "mypy_extensions",
       "pytest",
       "pytest-cov",
       "pytest-xdist",]

[project.urls]
Repository = "https://github.com/paknorton/pyPRMS.git"

[project.scripts]
convert_params = "pyPRMS.utilities.convert_params:main"
convert_cbh = "pyPRMS.utilities.convert_cbh:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "pyPRMS.version.__version__"}

[tool.setuptools.packages.find]
include = ["pyPRMS", "pyPRMS.*"]

[tool.setuptools.package-data]
"pyPRMS.xml" = ["*.xml"]
